fix: dynamic file path, routes, use air
