# routes/user.go
@@ -16,8 +16,8 @@ func UserRoutes(r *gin.Engine, controllers *controllers.UserController) {
 	apiAuth := r.Group("/api/user")
 	apiAuth.Use(middlewares.Auth())
 	{
-		apiAuth.POST("/register", controllers.UserRegister)
-		apiAuth.GET("/profile", controllers.UserProfile)
-		apiAuth.PUT("/update", controllers.UserUpdate)
+		apiAuth.POST("/", controllers.UserRegister)
+		apiAuth.GET("/", controllers.UserProfile)
+		apiAuth.PUT("/", controllers.UserUpdate)
 	}
 }
